# graphicEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: engine_setup.c  engine_setup.h  programMain.c
src/include/graph/utils/: context_manager.h  window_manager.h
src/utils/: context_manager.c  window_manager.c
